--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,9 @@ jobs:
       #   if: steps.check_tag.outputs.has_tag == 'false'
       #   run: echo "Run Actions if no new tag"
       #   steps:
+      - name: List repository contents
+        run: ls -al
+
       - name: Set up Node.js
         if: steps.check_tag.outputs.has_tag == 'false'
         uses: actions/setup-node@v3
