--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,6 @@ name: CLI Release
 
 on:
   workflow_dispatch:
-    branches:
-      - main
   # schedule:
   #   - cron: '0 12 * * 2'  # Runs every Tuesday at 12:00 PM (noon) ET
 
@@ -29,12 +27,14 @@ jobs:
       #   steps:
       - name: List repository contents
         run: ls -al
+      
+      - run: export NVMRC=$(cat .nvmrc)
 
       - name: Set up Node.js
         if: steps.check_tag.outputs.has_tag == 'false'
         uses: actions/setup-node@v3
         with:
-          node-version: $(cat .nvmrc)
+          node-version: $NVMRC
 
       - name: Install dependencies
         if: steps.check_tag.outputs.has_tag == 'false'
