--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,9 @@ jobs:
         
       - name: Get node version
         id: get_node_version
-        run: echo "::set-output name=NVMRC::$(cat .nvmrc)"
+        run: |
+          echo "::set-output name=NVMRC::$(cat .nvmrc)"
+          echo $(cat .nvmrc)
 
       - name: Set up Node.js
         if: steps.check_tag.outputs.has_tag == 'false'
