--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         if: steps.check_tag.outputs.has_tag == 'false'
         uses: actions/setup-node@v3
         with:
-          node-version: steps.get_node_version.outputs.NVMRC
+          node-version: "${{ steps.get_node_version.outputs.NVMRC }}"
 
       - name: Install dependencies
         if: steps.check_tag.outputs.has_tag == 'false'
