--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
       #   steps:
       - name: List repository contents
         run: ls -al
+      - run: rm oclif.manifest.json
         
       - run: echo "github.action_path:${{ github.action_path }}"
       
