--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,15 +18,20 @@ jobs:
         run: |
           if git describe --tags --exact-match HEAD >/dev/null 2>&1; then
             echo "HAS_TAG=true" >> $GITHUB_OUTPUT
+            echo true
           else
             echo "HAS_TAG=false" >> $GITHUB_OUTPUT
+            echo false
           fi
 
   release:
     runs-on: ubuntu-latest
     needs: checks
-    if: needs.checks.steps.check_tag.outputs.HAS_TAG == 'false'
+#     if: needs.checks.steps.check_tag.outputs.HAS_TAG == 'false'
     steps:
+      - name: echo value
+        run: echo "${{ needs.checks.steps.check_tag.outputs.HAS_TAG }}"
+      
       - name: Check out code
         uses: actions/checkout@v3
 
