--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
 
   checks:
     runs-on: ubuntu-latest
+    outputs:
+      HAS_TAG: ${{ steps.check_tag.outputs.has_tag }}
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -17,17 +19,17 @@ jobs:
         id: check_tag
         run: |
           if git describe --tags --exact-match HEAD >/dev/null 2>&1; then
-            echo "HAS_TAG=true" >> $GITHUB_OUTPUT
+            echo "has_tag=true" >> $GITHUB_OUTPUT
             echo true
           else
-            echo "HAS_TAG=false" >> $GITHUB_OUTPUT
+            echo "has_tag=false" >> $GITHUB_OUTPUT
             echo false
           fi
 
   release:
     runs-on: ubuntu-latest
     needs: checks
-#     if: needs.checks.steps.check_tag.outputs.HAS_TAG == 'false'
+#     if: needs.checks.outputs.HAS_TAG == 'false'
     steps:
       - name: echo value
         run: echo "${{ needs.checks.steps.check_tag.outputs.HAS_TAG }}"
