--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,10 +35,10 @@ jobs:
         uses: actions/checkout@v3
 
       # need to update
-#       - name: Set Git author
-#         run: |
-#           git config user.email "joli.lui@taplytics.com"
-#           git config user.name "Joli Lui"
+      - name: Set Git author
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
 
       # - name: Run Actions if no new tag
       #   if: steps.check_tag.outputs.HAS_TAG == 'false'
