--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,14 +68,18 @@ jobs:
         id: get_cli_version
         run: echo "CLI_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
+      - name: check tag
+        run: |
+          git log
+          echo $(git describe --abbrev=0 --tags)
+          ls -al
+          cd .git/refs/tags
+          ls
+          
       - name: Commit and push tag to main branch
         run: |
           git add .
           git commit --amend -m "Release v${{ steps.get_cli_version.outputs.CLI_VERSION }}"
-          git log
-          git describe --abbrev=0 --tags
-          git tag
-          git log
           git tag -f $(git describe --abbrev=0 --tags)
           git push origin main --follow-tags
       
