--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,16 +34,10 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      # need to update
       - name: Set Git author
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
-
-      # - name: Run Actions if no new tag
-      #   if: steps.check_tag.outputs.HAS_TAG == 'false'
-      #   run: echo "Run Actions if no new tag"
-      #   steps:
       
       - name: Get node version
         id: get_node_version
@@ -70,15 +64,7 @@ jobs:
 
       - name: Get latest tag
         id: get_latest_tag
-        run: |
-          echo "LATEST_TAG=$(git describe --abbrev=0 --tags)" >> $GITHUB_OUTPUT
-          git log
-          echo $(git describe --abbrev=0 --tags)
-          ls -al
-          cd .git/refs/tags
-          ls
-
-
+        run: echo "LATEST_TAG=$(git describe --abbrev=0 --tags)" >> $GITHUB_OUTPUT
           
       - name: Commit and push tag to main branch
         run: |
@@ -98,16 +84,17 @@ jobs:
       # - name: Publish to NPM
       #   run: npm publish --access public
 
-      # - name: Update CLI version in docs repo
-      #   run: |
-      #     git clone https://github.com/DevCycleHQ/devcycle-docs.git
-      #     cd devcycle-docs
-      #     sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v$VERSION'/" docusaurus.config.js
-      #     git add docusaurus.config.js
-      #     git commit -m "Update CLI version to v$VERSION"
-      #     git remote set-url origin https://github.com/DevCycleHQ/devcycle-docs.git
-      #     BRANCH_NAME="update-cli-version"
-      #     git branch "$BRANCH_NAME"
-      #     git checkout "$BRANCH_NAME"
-      #     git push -u origin "$BRANCH_NAME"
-      #     gh pr create --repo DevCycleHQ/devcycle-docs --base main --head "$BRANCH_NAME" --title "Update CLI version to v$VERSION" --body "This PR was automatically created by the DevCycle CLI release workflow."
+      - name: Update CLI version in docs repo
+      # replace with https://github.com/DevCycleHQ/devcycle-docs.git
+        run: |
+          git clone https://github.com/L-Joli/devcycle-docs-fork
+          cd devcycle-docs
+          sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v$VERSION'/" docusaurus.config.js
+          git add docusaurus.config.js
+          git commit -m "Update CLI version to v$VERSION"
+          git remote set-url origin https://github.com/L-Joli/devcycle-docs-fork
+          BRANCH_NAME="update-cli-version"
+          git branch "$BRANCH_NAME"
+          git checkout "$BRANCH_NAME"
+          git push -u origin "$BRANCH_NAME"
+          gh pr create --repo DevCycleHQ/devcycle-docs --base main --head "$BRANCH_NAME" --title "Update CLI version to v$VERSION" --body "This PR was automatically created by the DevCycle CLI release workflow."
