--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,8 @@ jobs:
         run: |
           git clone https://github.com/L-Joli/devcycle-docs-fork
           cd devcycle-docs-fork
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
           sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v$VERSION'/" docusaurus.config.js
           git add docusaurus.config.js
           git commit -m "Update CLI version to v$VERSION"
