--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,17 +87,20 @@ jobs:
       - name: Update CLI version in docs repo
       # replace with https://github.com/DevCycleHQ/devcycle-docs.git
       # cd devcycle-docs
+        id: update_docs
+        env:
+          BRANCH_NAME: update-cli-version-to-v${{ steps.get_cli_version.outputs.CLI_VERSION }}
         run: |
           git clone https://github.com/L-Joli/devcycle-docs-fork
           cd devcycle-docs-fork
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
-          sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v$VERSION'/" docusaurus.config.js
+          sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v${{ steps.get_cli_version.outputs.CLI_VERSION }}'/" docusaurus.config.js
           git add docusaurus.config.js
-          git commit -m "Update CLI version to v$VERSION"
+          git commit -m "Update CLI version to v${{ steps.get_cli_version.outputs.CLI_VERSION }}"
           git remote set-url origin https://github.com/L-Joli/devcycle-docs-fork
-          BRANCH_NAME="update-cli-version"
+          echo $BRANCH_NAME
           git branch "$BRANCH_NAME"
           git checkout "$BRANCH_NAME"
           git push -u origin "$BRANCH_NAME"
-          gh pr create --repo DevCycleHQ/devcycle-docs --base main --head "$BRANCH_NAME" --title "Update CLI version to v$VERSION" --body "This PR was automatically created by the DevCycle CLI release workflow."
+          gh pr create --repo DevCycleHQ/devcycle-docs --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ steps.get_cli_version.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow."
