--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,7 +90,7 @@ jobs:
         env:
           BRANCH_NAME: update-cli-version-to-v${{ steps.get_cli_version.outputs.CLI_VERSION }}
         run: |
-          git clone git@github.com:L-Joli/devcycle-docs-fork.git
+          git clone https://${{ secrets.GITHUB_TOKEN }}@github.com/L-Joli/devcycle-docs-fork.git
           cd devcycle-docs-fork
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
