--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,9 +80,15 @@ jobs:
           tag: "v${{ steps.get_cli_version.outputs.CLI_VERSION }}"
           generateReleaseNotes: "true"
           makeLatest: "true"
+          
+#       - name: Publish to NPM
+#         run: npm publish --access public  
+      
+      - name: Clone doc repo
+        run: |
+          git clone https://github.com/L-Joli/devcycle-docs-fork.git
+          cd devcycle-docs-fork   
 
-      # - name: Publish to NPM
-      #   run: npm publish --access public  
       - uses: actions/checkout@v3
       - name: Update CLI version in docs repo
       # replace with https://github.com/DevCycleHQ/devcycle-docs.git
@@ -90,14 +96,12 @@ jobs:
         env:
           BRANCH_NAME: update-cli-version-to-v${{ steps.get_cli_version.outputs.CLI_VERSION }}
         run: |
-          git clone https://github.com/L-Joli/devcycle-docs-fork.git
-          cd devcycle-docs-fork
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git pull
           echo $BRANCH_NAME
           git branch "$BRANCH_NAME"
-          git checkout "$BRANCH_NAME"
+          git checkout "$BRANCH_NAME"   
           git branch
           sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v${{ steps.get_cli_version.outputs.CLI_VERSION }}'/" docusaurus.config.js
           git add docusaurus.config.js
