--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,31 +83,33 @@ jobs:
           
 #       - name: Publish to NPM
 #         run: npm publish --access public  
-      
-      - name: Clone doc repo
-        run: |
-          git clone https://github.com/L-Joli/devcycle-docs-fork.git
-          cd devcycle-docs-fork   
 
-      - uses: actions/checkout@v3
+  update_doc:
+    runs-on: ubuntu-latest
+    needs: release
+    steps:      
+      - name: Check out code
+        uses: actions/checkout@v3
+        with:
+        # replace all L-Joli/devcycle-docs-fork with DevCycleHQ/devcycle-docs
+          repository: L-Joli/devcycle-docs-fork
+
+      - name: Set Git author
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+
       - name: Update CLI version in docs repo
-      # replace with https://github.com/DevCycleHQ/devcycle-docs.git
-      # cd devcycle-docs
         env:
           BRANCH_NAME: update-cli-version-to-v${{ steps.get_cli_version.outputs.CLI_VERSION }}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git pull
           echo $BRANCH_NAME
-          git branch "$BRANCH_NAME"
-          git checkout "$BRANCH_NAME"   
+          git checkout -b "$BRANCH_NAME"
           git branch
           sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v${{ steps.get_cli_version.outputs.CLI_VERSION }}'/" docusaurus.config.js
           git add docusaurus.config.js
           git commit -m "Update CLI version to v${{ steps.get_cli_version.outputs.CLI_VERSION }}"
-          git remote set-url origin https://github.com/L-Joli/devcycle-docs-fork
           echo PUSHING BRANCH...
-          git push -u origin "$BRANCH_NAME"
+          git push
           echo PR CREATING...
-          gh pr create --repo DevCycleHQ/devcycle-docs --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ steps.get_cli_version.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow." --token ${{ secrets.GITHUB_TOKEN }}
+          gh pr create --repo L-Joli/devcycle-docs-fork --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ steps.get_cli_version.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow." --token ${{ secrets.GITHUB_TOKEN }}
