--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,7 +87,7 @@ jobs:
   update_doc:
     runs-on: ubuntu-latest
     needs: release
-    permissions: read-all|write-all
+    permissions: write-all
     steps:      
       - name: Check out code
         uses: actions/checkout@v3
