--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,8 +99,8 @@ jobs:
 
       - name: Set Git author
         run: |
-          git config user.name 'github-actions'
-          git config user.email 'github-actions@github.com'
+          git config user.name github-actions
+          git config user.email github-actions@github.com
 
       - name: Update CLI version in docs repo
         env:
