--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: checks
+    outputs:
+      CLI_VERSION: ${{ steps.get_cli_version.outputs.CLI_VERSION }}
     if: needs.checks.outputs.HAS_TAG == 'false'
     steps:      
       - name: Check out code
@@ -104,15 +106,15 @@ jobs:
 
       - name: Update CLI version in docs repo
         env:
-          BRANCH_NAME: update-cli-version-to-v${{ steps.get_cli_version.outputs.CLI_VERSION }}
+          BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
         run: |
           echo $BRANCH_NAME
           git checkout -b "$BRANCH_NAME"
           git branch
-          sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v${{ steps.get_cli_version.outputs.CLI_VERSION }}'/" docusaurus.config.js
+          sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v${{ needs.release.outputs.CLI_VERSION }}'/" docusaurus.config.js
           git add docusaurus.config.js
-          git commit -m "Update CLI version to v${{ steps.get_cli_version.outputs.CLI_VERSION }}"
+          git commit -m "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}"
           echo PUSHING BRANCH...
           git push -u origin "$BRANCH_NAME"
           echo PR CREATING...
-          gh pr create --repo L-Joli/devcycle-docs-fork --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ steps.get_cli_version.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow." --token ${{ secrets.GITHUB_TOKEN }}
+          gh pr create --repo L-Joli/devcycle-docs-fork --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow." --token ${{ secrets.GITHUB_TOKEN }}
