--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,10 +94,11 @@ jobs:
     needs: release
     steps:      
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
         # replace all L-Joli/devcycle-docs-fork with DevCycleHQ/devcycle-docs
           repository: L-Joli/devcycle-docs-fork
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Set Git author
         run: |
