--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,6 +91,8 @@ jobs:
 
   update_doc:
     runs-on: ubuntu-latest
+    env:
+      TOKEN: ${{ secrets.PAT_TOKEN }}
     needs: release
     steps:      
       - name: Check out code
@@ -98,7 +100,7 @@ jobs:
         with:
         # replace all L-Joli/devcycle-docs-fork with DevCycleHQ/devcycle-docs
           repository: L-Joli/devcycle-docs-fork
-          token: ${{ secrets.PAT_TOKEN }}
+          token: $TOKEN
 
       - name: Set Git author
         run: |
