--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,12 +95,10 @@ jobs:
     steps:      
       - name: Check out code
         uses: actions/checkout@v3
-        env:
-          TOKEN: ${{ secrets.PAT_TOKEN }}
         with:
         # replace all L-Joli/devcycle-docs-fork with DevCycleHQ/devcycle-docs
           repository: L-Joli/devcycle-docs-fork
-          token: $TOKEN
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Set Git author
         run: |
