--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,12 +98,13 @@ jobs:
         with:
         # replace all L-Joli/devcycle-docs-fork with DevCycleHQ/devcycle-docs
           repository: L-Joli/devcycle-docs-fork
-          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Set Git author
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git config --global credential.helper 'store --file=.git-credentials'
+          echo "https://${{ secrets.PAT_TOKEN }}@github.com" > .git-credentials
 
       - name: Update CLI version in docs repo
         env:
