--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,8 +101,10 @@ jobs:
 
       - name: Set Git author
         run: |
+          pwd
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git config --global credential.helper store
 
       - name: Update CLI version in docs repo
         env:
@@ -113,18 +115,10 @@ jobs:
           git branch
           sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v${{ needs.release.outputs.CLI_VERSION }}'/" docusaurus.config.js
           git add docusaurus.config.js
+          git commit -m "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}"
+          echo PUSHING BRANCH...
+          git push -u origin "$BRANCH_NAME"
+          echo PR CREATING...
+          gh pr create --repo L-Joli/devcycle-docs-fork --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow." --token ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push
-        env:
-          BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "Automated Change: Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}"
-          branch: $BRANCH_NAME
-          
-      - name: PR
-        env:
-          BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
-        run: gh pr create --repo L-Joli/devcycle-docs-fork --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow." --token ${{ secrets.PAT_TOKEN }}
-          
         
