--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,10 +102,9 @@ jobs:
       - name: Set Git author
         run: |
           pwd
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git config --global credential.helper store
-
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          
       - name: Update CLI version in docs repo
         env:
           BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
@@ -116,9 +115,19 @@ jobs:
           sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = 'v${{ needs.release.outputs.CLI_VERSION }}'/" docusaurus.config.js
           git add docusaurus.config.js
           git commit -m "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}"
-          echo PUSHING BRANCH...
-          git push -u origin "$BRANCH_NAME"
-          echo PR CREATING...
-          gh pr create --repo L-Joli/devcycle-docs-fork --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow." --token ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Push code to another repository
+        env:
+          BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
+        uses: ad-m/github-push-action@master
+        with:
+          branch: $BRANCH_NAME
+          github_token: ${{ secrets.PAT_TOKEN }}
+          force_with_lease: true
+
+      - name: pr
+        env:
+          BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
+        run: gh pr create --repo L-Joli/devcycle-docs-fork --base main --head "$BRANCH_NAME" --title "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}" --body "This PR was automatically created by the DevCycle CLI release workflow." --token ${{ secrets.PAT_TOKEN }}
+   
         
