--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,8 @@ jobs:
         with:
         # replace all L-Joli/devcycle-docs-fork with DevCycleHQ/devcycle-docs
           repository: L-Joli/devcycle-docs-fork
+          persist-credentials: false
+          fetch-depth: 0
 
       - name: Set Git author
         run: |
@@ -109,6 +111,8 @@ jobs:
         env:
           BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
         run: |
+          pwd
+          ls -al
           echo $BRANCH_NAME
           git checkout -b "$BRANCH_NAME"
           git branch
@@ -122,6 +126,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           branch: $BRANCH_NAME
+          repository: L-Joli/devcycle-docs-fork
           github_token: ${{ secrets.PAT_TOKEN }}
           force_with_lease: true
 
