--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 jobs:
 
   checks:
+    if: false
     runs-on: ubuntu-latest
     outputs:
       HAS_TAG: ${{ steps.check_tag.outputs.has_tag }}
@@ -27,11 +28,12 @@ jobs:
           fi
 
   release:
+    if: false
     runs-on: ubuntu-latest
     needs: checks
     outputs:
       CLI_VERSION: ${{ steps.get_cli_version.outputs.CLI_VERSION }}
-    if: needs.checks.outputs.HAS_TAG == 'false'
+#     if: needs.checks.outputs.HAS_TAG == 'false'
     steps:      
       - name: Check out code
         uses: actions/checkout@v3
@@ -91,7 +93,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write 
-    needs: release
+#     needs: release
     steps:      
       - name: Check out code
         uses: actions/checkout@v3
@@ -103,7 +105,6 @@ jobs:
 
       - name: Set Git author
         run: |
-          pwd
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           
@@ -111,7 +112,6 @@ jobs:
         env:
           BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
         run: |
-          pwd
           ls -al
           echo $BRANCH_NAME
           git checkout -b "$BRANCH_NAME"
@@ -125,10 +125,10 @@ jobs:
           BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
         uses: ad-m/github-push-action@master
         with:
+          github_token: ${{ secrets.PAT_TOKEN }}
           branch: $BRANCH_NAME
           repository: L-Joli/devcycle-docs-fork
-          github_token: ${{ secrets.PAT_TOKEN }}
-          force_with_lease: true
+          force: true
 
       - name: pr
         env:
