--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,9 +126,9 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.PAT_TOKEN }}
+          force_with_lease: true
           branch: $BRANCH_NAME
           repository: L-Joli/devcycle-docs-fork
-          force: true
 
       - name: pr
         env:
