--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,6 +107,7 @@ jobs:
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global credential.helper cache
           
       - name: Update CLI version in docs repo
         env:
@@ -121,9 +122,11 @@ jobs:
           git commit -m "Update CLI version to v${{ needs.release.outputs.CLI_VERSION }}"
 
       - name: Push code to another repository
+        env:
+          BRANCH_NAME: update-cli-version-to-v${{ needs.release.outputs.CLI_VERSION }}
         run:  |
           git remote get-url origin
-          git push 
+          git push --set-upstream origin "$BRANCH_NAME"
 
       - name: pr
         env:
