--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -15,6 +15,11 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
+      - name: Set Git author
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+      
       - name: Install jq tool
         run: |
           sudo apt-get update
